--- a/index.html
+++ b/index.html
@@ -4,20 +4,102 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Wеb технологии: HTML и CSS</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+		<link rel="stylesheet" href="../webtech.css">
+		<link rel="stylesheet" href="dist/theme/sky.css" id="theme">
 
 		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+		<link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme">
+
+		<base target="_blank">
 	</head>
 	<body>
+
+		<script src="//unpkg.com/graphre/dist/graphre.js"></script>
+		<script src="//unpkg.com/nomnoml/dist/nomnoml.js"></script>
+
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					HTML и CSS
+				</section>
+				<section>
+					<p>HTML</p>
+					<ul>
+						<li>Съдържание vs. предтсвяне (изглед)</li>
+						<li>Структура на документа</li>
+						<li>"Отношения" между документите</li>
+						<li>Markup?</li>
+						<li>Метаинформация</li>
+						<li>Markup език</li>
+					</ul>
+				</section>
+				<section>
+					<ul>
+						<li>HTML елементи: изображения, параграфи, връзки, други</li>
+						<li>Секции на HTML документа</li>
+					</ul>
+				</section>
+				<section>
+					<p>CSS</p>
+					<ul>
+						<li>Разделяме презентацията от съдържанието</li>
+						<ul>
+							<li>Преизползване в рамките на документа</li>
+							<li>Преизползване между документите</li>
+							<li>Промяна на стила без да се засяга съдържанието</li>
+							<li>Разделение на отговорностите</li>
+						</ul>
+						<li>Списък от правила: селектори и декларации</li>
+						<li>Селектори на тип елементи, клас елементи, отделен елемент </li>
+						<li>Комбинации от <a href="https://en.wikipedia.org/wiki/CSS#Selector">селектори</a></li>
+						<li>Inline CSS</li>
+					</ul>
+				</section>
+				<section>
+					<p style="margin-bottom: 1em;"><b><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/The_box_model">Разположение на елементите (layout)</a></b></p>
+					<div style="text-align: left;">
+						<p>Печатна преса: Пресата на <a href="https://www.fontfabric.com/blog/gutenberg-first-typeface-original-bible-typography-used/">Johannes Gutenberg</a></p>
+					</div>
+
+					<div style="text-align: left;">
+						<p>Външен стил: Блокове и inline кутии (outer display type)</p>
+						<ul style="padding-left:1em">
+							<li>Ред на кутиите</li>
+							<li>Поведение спрямо текущия ред</li>
+							<li>Определяне на широчина и височина</li>
+							<li>Отстояние и уплътнение  (margin и padding)</li>
+						</ul>
+						<p>Вътрешен стил (inner display type)</p>
+						<ul style="padding-left:1em">
+							<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Normal_Flow">Нормален поток</a>, <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Flexbox">Flexbox model</a>, <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Grids">Grid модел</a></li>
+						</ul>
+					</div>
+				</section>
+				<section>
+					<p><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/The_box_model">Box модел</a></p>
+					<ul>
+						<li>Съдържание</li>
+						<li>Уплътнение</li>
+						<li>Рамка</li>
+						<li>Отстояние</li>
+						<li>Block vs. Inline Box</li>
+						<li>Inline block</li>
+					</ul>
+				</section>
+				<section>
+					<p>Примери</p>
+					<ul>
+						<li><a href="sample1.html">sample1.html</li>
+						<li><a href="sample2.html">sample2.html</li>
+						<li><a href="sample3.html">sample3.html</li>
+						<li><a href="sample4.html">sample4.html</li>
+						<li><a href="sample5.html">sample5.html</li>
+					</ul>
+				</section>
 			</div>
 		</div>
 
